--- a/AttenceProject/Views/SysOverTimes/ApproveCopy.cshtml
+++ b/AttenceProject/Views/SysOverTimes/ApproveCopy.cshtml
@@ -16,250 +16,248 @@
     <script src="~/scripts/easyui-lang-zh_CN.js"></script>
     <link rel="stylesheet" type="text/css" href="~/easyui/themes/default/easyui.css" />
     <script type="text/javascript">
-        
+
 
         /**
 	* Name 添加记录
 	*/
-	function add(){
-		$('#wu-form').form('submit', {
-		    url: '../../SysAlternatives/SaveAdd',
-		    success: function (data) {
-				if(data){
-					$.messager.alert('信息提示','提交成功！','info');
-					$('#wu-dialog').dialog('close');
-					window.location.reload();
+        function add() {
+            $('#wu-form').form('submit', {
+                url: '../../SysAlternatives/SaveAdd',
+                success: function (data) {
+                    if (data) {
+                        $.messager.alert('信息提示', '提交成功！', 'info');
+                        $('#wu-dialog').dialog('close');
+                        window.location.reload();
 
-				}
-				else
-				{
-					$.messager.alert('信息提示','提交失败！','info');
-				}
-			}
-		});
-	}
-
-	/**
-	* Name 修改记录
-	*/
-	function edit() {
-	    var applystatus = $('input[name="ApplyStatus"]:checked').val();
-	    var applyrate = $("#Applyrate").val();
-	    var applyid = $("#ID").val();
-	    $.ajax({
-	        url: '../../SysOverTimes/SaveApprove',
-	        data: { applystatus: applystatus, applyrate: applyrate, applyid: applyid },
-	        async: false,
-	        method: 'get',
-	        success: function (data) {	            
-	                $.messager.alert('信息提示', '提交成功！', 'info');
-	                $('#wu-dialog').dialog('close');
-	                window.location.reload();
-	            
-	            
-	        }
-	    });
-		
-	}
-
-	/**
-	* Name 删除记录
-	*/
-	function remove(){
-		$.messager.confirm('信息提示','确定要删除该备选项？', function(result){
-			if(result){
-				var items = $('#wu-datagrid').datagrid('getSelected');
-				var ids = [];
-				$(items).each(function(){
-					ids.push(this.ID);
-				});
-				//alert(ids);return;
-				$.ajax({
-				    url: '../../SysAlternatives/Delete',
-				    data: { ids: ids.toString() },
-					success:function(data){
-						if(data){
-						    $.messager.alert('信息提示', '删除成功！', 'info');
-						    setTimeout(function () { window.location.reload() }, 800);
-
-						}
-						else
-						{
-						    $.messager.alert('信息提示', '删除失败！', 'info');
-						    setTimeout(function () { window.location.reload() }, 800);
-
-						}
-					}
-				});
-			}
-		});
-	}
-
-	/**
-	* Name 打开添加窗口
-	*/
-	function openAdd(){
-		$('#wu-form').form('clear');
-		$('#wu-dialog').dialog({
-			closed: false,
-			modal:true,
-            title: "添加信息",
-            buttons: [{
-                text: '确定',
-                iconCls: 'icon-ok',
-                handler: add
-            }, {
-                text: '取消',
-                iconCls: 'icon-cancel',
-                handler: function () {
-                    $('#wu-dialog').dialog('close');
+                    }
+                    else {
+                        $.messager.alert('信息提示', '提交失败！', 'info');
+                    }
                 }
-            }]
+            });
+        }
+
+        /**
+        * Name 修改记录
+        */
+        function edit() {
+            var applystatus = $('input[name="ApplyStatus"]:checked').val();
+            var applyrate = $("#Applyrate").val();
+            var applyid = $("#ID").val();
+            $.ajax({
+                url: '../../SysOverTimes/SaveApprove',
+                data: { applystatus: applystatus, applyrate: applyrate, applyid: applyid },
+                async: false,
+                method: 'get',
+                success: function (data) {
+                    $.messager.alert('信息提示', '提交成功！', 'info');
+                    $('#wu-dialog').dialog('close');
+                    window.location.reload();
+
+
+                }
+            });
+
+        }
+
+        /**
+        * Name 删除记录
+        */
+        function remove() {
+            $.messager.confirm('信息提示', '确定要删除该备选项？', function (result) {
+                if (result) {
+                    var items = $('#wu-datagrid').datagrid('getSelected');
+                    var ids = [];
+                    $(items).each(function () {
+                        ids.push(this.ID);
+                    });
+                    //alert(ids);return;
+                    $.ajax({
+                        url: '../../SysAlternatives/Delete',
+                        data: { ids: ids.toString() },
+                        success: function (data) {
+                            if (data) {
+                                $.messager.alert('信息提示', '删除成功！', 'info');
+                                setTimeout(function () { window.location.reload() }, 800);
+
+                            }
+                            else {
+                                $.messager.alert('信息提示', '删除失败！', 'info');
+                                setTimeout(function () { window.location.reload() }, 800);
+
+                            }
+                        }
+                    });
+                }
+            });
+        }
+
+        /**
+        * Name 打开添加窗口
+        */
+        function openAdd() {
+            $('#wu-form').form('clear');
+            $('#wu-dialog').dialog({
+                closed: false,
+                modal: true,
+                title: "添加信息",
+                buttons: [{
+                    text: '确定',
+                    iconCls: 'icon-ok',
+                    handler: add
+                }, {
+                    text: '取消',
+                    iconCls: 'icon-cancel',
+                    handler: function () {
+                        $('#wu-dialog').dialog('close');
+                    }
+                }]
+            });
+        }
+
+        /**
+        * Name 打开修改窗口
+        */
+
+        function getJsonObjLength(jsonObj) {
+            var Length = 0;
+            for (var item in jsonObj) {
+                Length++;
+            }
+            return Length;
+        }
+        function openApprove() {
+            $('#wu-form').form('clear');
+            var row = $('#wu-datagrid').datagrid('getSelected');
+            if (row) {
+                var id = row.ID;
+                $.ajax({
+                    url: '../../SysOverTimes/GetOverTimeInfo',
+                    data: { id: id },
+                    async: false,
+                    dataType: "json",
+                    method: 'get',
+                    success: function (data) {
+                        $('#wu-form').form('load', data);
+                    }
+                });
+                $('#wu-dialog').dialog({
+                    closed: false,
+                    modal: true,
+                    title: "修改信息",
+                    buttons: [{
+                        text: '确定',
+                        iconCls: 'icon-ok',
+                        handler: edit
+                    }, {
+                        text: '取消',
+                        iconCls: 'icon-cancel',
+                        handler: function () {
+                            $('#wu-dialog').dialog('close');
+                        }
+                    }]
+                });
+                var afterstr = "";
+                $(".tr_after").remove();
+                $.ajax({
+                    url: '../../SysOverTimes/GetApproveDetail',
+                    data: { id: id },
+                    async: false,
+                    dataType: "json",
+                    method: 'get',
+                    success: function (data) {
+                        var length = getJsonObjLength(data);
+                        for (var i = 0; i < length; i++) {
+
+                            //alert(item);
+                            afterstr += '<tr class="tr_after"><td align="right" width="30">审批人:</td><td align="right" width="30">' + data[i].UserName + '</td></tr>' +
+                                      '<tr class="tr_after"><td align="right" width="70">审批意见:</td><td align="right" width="30">' + data[i].Applyrate + '</td></tr>' +
+                                     '<tr class="tr_after"><td align="right" width="70">审批结果:</td><td align="right" width="30">' + data[i].ApplyStatus + '</td></tr>' +
+                                      '<tr class="tr_after" style="height:20px"></tr>';
+
+                        }
+                        $("#tr_reason").after(afterstr);
+                    }
+                })
+            }
+
+        }
+
+        /**
+    * Name 打开详情窗口
+    */
+        function openDetail() {
+            $('#wu-form').form('clear');
+            var row = $('#wu-datagrid').datagrid('getSelected');
+            if (row) {
+                var id = row.ID;
+                $.ajax({
+                    url: '../../SysAlternatives/GetInfo',
+                    data: { id: id },
+                    async: false,
+                    dataType: "json",
+                    method: 'get',
+                    success: function (data) {
+                        $('#wu-form').form('load', data);
+                    }
+                });
+                $('#wu-dialog').dialog({
+                    closed: false,
+                    modal: true,
+                    title: "修改信息",
+                    buttons: [{
+                        text: '确定',
+                        iconCls: 'icon-ok',
+                        handler: function () {
+                            $('#wu-dialog').dialog('close');
+                        }
+                    }]
+                });
+            }
+        }
+
+        //查询按钮
+        function doSearch() {
+            var atext = $('#AlternativeText_search').val();
+            var agid = $('#ComboBoxGroup').combobox("getValue");
+            debugger;
+            $('#wu-datagrid').datagrid('load', {
+                AlternativeText: atext,
+                AlternativeGroupID: agid
+            });
+        }
+
+        //清除搜索条件
+        function clearquery() {
+            $('#AlternativeText_search').val('');
+            $('#ComboBoxGroup').combobox('setValue', '0');
+        }
+
+        $(document).ready(function () {
+            //doSearch();
+        })
+
+        $(function (jsonArray) {
+            $('#wu-datagrid').datagrid({
+                title: '抄送列表',
+                iconCls: 'icon-ok',
+                pageSize: 1,//默认选择的分页是每页5行数据
+                pageList: [1, 2, 3, 4],//可以选择的分页集合
+                nowrap: true,//设置为true，当数据长度超出列宽时将会自动截取
+                striped: true,//设置为true将交替显示行背景。
+                collapsible: true,//显示可折叠按钮
+                toolbar: "#tb",//在添加 增添、删除、修改操作的按钮要用到这个
+                url: '../../SysOverTimes/GetApproveCopy',//url调用Action方法
+                method: 'get',
+                loadMsg: '数据装载中......',
+                singleSelect: true,//为true时只能选择单行
+                fitColumns: true,//允许表格自动缩放，以适应父容器
+                remoteSort: false,
+                pagination: true,//分页
+                rownumbers: true //行数
+            })
         });
-	}
-
-	/**
-	* Name 打开修改窗口
-	*/
-
-	function getJsonObjLength(jsonObj) {
-	    var Length = 0;
-	    for (var item in jsonObj) {
-	        Length++;
-	    }
-	    return Length;
-	}
-	function openApprove(){
-	    $('#wu-form').form('clear');
-	    var row = $('#wu-datagrid').datagrid('getSelected');
-	    if (row) {
-	        var id = row.ID;
-	        $.ajax({
-	            url: '../../SysOverTimes/GetOverTimeInfo',
-	            data: { id: id },
-	            async: false,
-                dataType:"json",
-	            method:'get',
-	        success: function (data) {
-	            $('#wu-form').form('load', data);
-	        }
-	    });
-	        $('#wu-dialog').dialog({
-	            closed: false,
-	            modal: true,
-	            title: "修改信息",
-	            buttons: [{
-	                text: '确定',
-	                iconCls: 'icon-ok',
-	                handler: edit
-	            }, {
-	                text: '取消',
-	                iconCls: 'icon-cancel',
-	                handler: function () {
-	                    $('#wu-dialog').dialog('close');
-	                }
-	            }]
-	        });
-	        var afterstr = "";
-	        $(".tr_after").remove();
-	        $.ajax({
-	            url: '../../SysOverTimes/GetApproveDetail',
-	            data: { id: id },
-	            async:false,
-	            dataType: "json",
-	            method: 'get',
-	            success: function (data) {
-	                var length = getJsonObjLength(data);
-	                for (var i = 0; i < length; i++) {
-
-	                    //alert(item);
-	                    afterstr += '<tr class="tr_after"><td align="right" width="30">审批人:</td><td align="right" width="30">' + data[i].LastChecker + '</td></tr>' +
-	                              '<tr class="tr_after"><td align="right" width="70">审批意见:</td><td align="right" width="30">' + data[i].Applyrate + '</td></tr>' +
-	                             '<tr class="tr_after"><td align="right" width="70">审批结果:</td><td align="right" width="30">' + data[i].ApplyStatus + '</td></tr>' +
-                                  '<tr class="tr_after" style="height:20px"></tr>';
-                        
-	                }
-	                $("#tr_reason").after(afterstr);
-	            }
-	        })
-	    }
-
-	}
-
-	/**
-* Name 打开详情窗口
-*/
-	function openDetail() {
-	    $('#wu-form').form('clear');
-	    var row = $('#wu-datagrid').datagrid('getSelected');
-	    if (row) {
-	        var id = row.ID;
-	        $.ajax({
-	            url: '../../SysAlternatives/GetInfo',
-	            data: { id: id },
-	            async: false,
-	            dataType: "json",
-	            method: 'get',
-	            success: function (data) {
-	                $('#wu-form').form('load', data);
-	            }
-	        });
-	        $('#wu-dialog').dialog({
-	            closed: false,
-	            modal: true,
-	            title: "修改信息",
-	            buttons: [{
-	                text: '确定',
-	                iconCls: 'icon-ok',
-	                handler: function () {
-	                    $('#wu-dialog').dialog('close');
-	                }
-	            }]
-	        });
-	    }
-	}
-
-    //查询按钮
-	function doSearch() {
-	    var atext = $('#AlternativeText_search').val();
-	    var agid = $('#ComboBoxGroup').combobox("getValue");
-	    debugger;
-	    $('#wu-datagrid').datagrid('load', {
-	        AlternativeText: atext,
-	        AlternativeGroupID: agid
-	    });
-	}
-
-    //清除搜索条件
-	function clearquery() {
-	    $('#AlternativeText_search').val('');
-	    $('#ComboBoxGroup').combobox('setValue', '0');
-	}
-
-	$(document).ready(function () {
-	    //doSearch();
-	})
-
-	$(function (jsonArray) {
-	    $('#wu-datagrid').datagrid({
-	        title: '抄送列表',
-	        iconCls: 'icon-ok',
-	        pageSize: 1,//默认选择的分页是每页5行数据
-	        pageList: [1, 2, 3, 4],//可以选择的分页集合
-	        nowrap: true,//设置为true，当数据长度超出列宽时将会自动截取
-	        striped: true,//设置为true将交替显示行背景。
-	        collapsible: true,//显示可折叠按钮
-	        toolbar: "#tb",//在添加 增添、删除、修改操作的按钮要用到这个
-	        url: '../../SysOverTimes/GetApproveCopy',//url调用Action方法
-	        method: 'get',
-	        loadMsg: '数据装载中......',
-	        singleSelect: true,//为true时只能选择单行
-	        fitColumns: true,//允许表格自动缩放，以适应父容器
-	        remoteSort: false,
-	        pagination: true,//分页
-	        rownumbers: true //行数
-	    })
-	});
     </script>
 </head>
 <body>
@@ -288,26 +286,26 @@
                     </div>*@
             </div>
             <!-- End of toolbar -->
-            <table id="wu-datagrid" class="easyui-datagrid"
-                   data-options="toolbar:'#wu-toolbar',border:false,singleSelect:true"  style="width:inherit; height:inherit">
-                    <thead>
-                        <tr>
-                            <th field="ck" checkbox="true"></th>
-                            <th data-options="field:'ID',width:80">ID</th>
-                            <th data-options="field:'ProposerID',width:100">申请人ID</th>
-                            <th data-options="field:'StartTime',width:120,align:'right'">开始时间</th>
-                            <th data-options="field:'EndTime',width:120">结束时间</th>
-                            <th data-options="field:'Time',width:60,align:'center'">时长</th>
-                            <th data-options="field:'OverTimeType',width:80,align:'right'">加班类型</th>
-                            <th data-options="field:'Account_Method',width:120">加班结算方式</th>
-                            <th data-options="field:'OverTimeReason',width:200,align:'center'">加班原因</th>
-                            <th data-options="field:'CopyFor',width:120">抄送人</th>
-                            <th data-options="field:'ApplyStatus',width:60,align:'center'">申请状态</th>
-                        </tr>
-                    </thead>
-                </table>
-
-</div>
+            <table id="wu-datagrid" class="easyui-datagrid" toolbar="#wu-toolbar" title="Basic DataGrid" style="width:inherit; height:inherit"
+                   data-options="singleSelect:true,collapsible:true,url:'../../SysOverTimes/GetApproveCopyJson',pagesize:3,method:'get'"
+                   footer="#foot" pagination="true" rownumbers="true" singleselect="true" fitColumns="true">
+                <thead>
+                    <tr>
+                        <th field="ck" checkbox="true"></th>
+                        <th data-options="field:'ID',width:80">ID</th>
+                        <th data-options="field:'ProposerID',width:100">申请人ID</th>
+                        <th data-options="field:'StartTime',width:120,align:'right'">开始时间</th>
+                        <th data-options="field:'EndTime',width:120">结束时间</th>
+                        <th data-options="field:'Time',width:60,align:'center'">时长</th>
+                        <th data-options="field:'OverTimeType',width:80,align:'right'">加班类型</th>
+                        <th data-options="field:'Account_Method',width:120">加班结算方式</th>
+                        <th data-options="field:'OverTimeReason',width:200,align:'center'">加班原因</th>
+                        <th data-options="field:'CopyFor',width:120">抄送人</th>
+                        <th data-options="field:'ApplyStatus',width:60,align:'center'">申请状态</th>
+                    </tr>
+                </thead>
+            </table>
+        </div>
     </div>
 
     <!-- Begin of easyui-dialog -->
