--- a/AttenceProject/Views/SysDepts/Index.cshtml
+++ b/AttenceProject/Views/SysDepts/Index.cshtml
@@ -283,7 +283,7 @@
                     <a href="#" class="easyui-linkbutton" iconCls="icon-reload" onclick="EditDept()" plain="true">编辑部门</a>
                     <a href="#" class="easyui-linkbutton" iconCls="icon-print" onclick="EditPerson()" plain="true">编辑员工</a>
                     </div>
-                <div class="easyui-panel" title="部门人员信息" style="width:500px;" >
+                <div class="easyui-panel" title="部门人员信息" style="width:500px; display:none" >
                     <form id="wu-form" method="post" class="deptinfo">
                         <table>
                             <tr style="">
