--- a/AttenceProject/Views/SysVacations/List.cshtml
+++ b/AttenceProject/Views/SysVacations/List.cshtml
@@ -263,7 +263,7 @@
                         <th data-options="field:'Emergency',width:60,align:'center'">紧急联系电话</th>
                         <th data-options="field:'VacationType',width:80,align:'right'">请假类型</th>
                         <th data-options="field:'VacationReason',width:200,align:'center'">请假原因</th>
-                        <th data-options="field:'CopyFor',width:120">抄送人</th>
+                        @*<th data-options="field:'CopyFor',width:120">抄送人</th>*@
                         <th data-options="field:'ApplyStatus',width:60,align:'center'">申请状态</th>
 
                         <th data-options="field:'opt',align:'center',halign:'center'" >查看申请详情</th>
