--- a/AttenceProject/Views/SysOverTimes/Approve.cshtml
+++ b/AttenceProject/Views/SysOverTimes/Approve.cshtml
@@ -282,7 +282,7 @@
                         <th data-options="field:'OverTimeType',width:80,align:'right'">加班类型</th>
                         <th data-options="field:'Account_Method',width:120">加班结算方式</th>
                         <th data-options="field:'OverTimeReason',width:200,align:'center'">加班原因</th>
-                        <th data-options="field:'CopyFor',width:120">抄送人</th>
+                        @*<th data-options="field:'CopyFor',width:120">抄送人</th>*@
                         <th data-options="field:'ApplyStatus',width:60,align:'center'">申请状态</th>
                     </tr>
                 </thead>
@@ -339,7 +339,7 @@
                     <td align="right" width="65">审批结果:</td>
                     <td>
                         <input type="radio" name="ApplyStatus"  value="1"/>通过
-                        <input type="radio" name="ApplyStatus"  value="0"/>驳回
+                        <input type="radio" name="ApplyStatus"  value="-1"/>驳回
                     </td>
                 </tr>
             </table>
