--- a/AttenceProject/Views/SysVacations/Approve.cshtml
+++ b/AttenceProject/Views/SysVacations/Approve.cshtml
@@ -238,6 +238,16 @@
 	$(document).ready(function () {
 	    //doSearch();
 	})
+	function formatterApplyStatus(value, row, index) {
+	    if (row.ApplyStatus == 1) {
+	        return "审批完成";
+	    } else if (row.ApplyStatus == 0) {
+	        return "审批中";
+	    } else if (row.ApplyStatus == -1) {
+	        return "审批被驳回";
+	    }
+	}
+
     </script>
 </head>
 <body>
@@ -283,8 +293,8 @@
                         <th data-options="field:'Emergency',width:60,align:'center'">紧急联系电话</th>
                         <th data-options="field:'VacationType',width:80,align:'right'">请假类型</th>
                         <th data-options="field:'VacationReason',width:200,align:'center'">请假原因</th>
-                        <th data-options="field:'CopyFor',width:120">抄送人</th>
-                        <th data-options="field:'ApplyStatus',width:60,align:'center'">申请状态</th>
+                        @*<th data-options="field:'CopyFor',width:120">抄送人</th>*@
+                        <th data-options="field:'ApplyStatus',width:60,align:'center'" formatter="formatterApplyStatus">申请状态</th>
                     </tr>
                 </thead>
             </table>
@@ -340,7 +350,7 @@
                     <td align="right" width="70">审批结果:</td>
                     <td>
                         <input type="radio" name="ApplyStatus"  value="1"/>通过
-                        <input type="radio" name="ApplyStatus"  value="0"/>驳回
+                        <input type="radio" name="ApplyStatus"  value="-1"/>驳回
                     </td>
                 </tr>
             </table>
