--- a/AttenceProject/Views/SysVacations/ApproveCopy.cshtml
+++ b/AttenceProject/Views/SysVacations/ApproveCopy.cshtml
@@ -300,7 +300,7 @@
                         <th data-options="field:'OverTimeType',width:80,align:'right'">加班类型</th>
                         <th data-options="field:'Account_Method',width:120">加班结算方式</th>
                         <th data-options="field:'OverTimeReason',width:200,align:'center'">加班原因</th>
-                        <th data-options="field:'CopyFor',width:120">抄送人</th>
+                        @*<th data-options="field:'CopyFor',width:120">抄送人</th>*@
                         <th data-options="field:'ApplyStatus',width:60,align:'center'">申请状态</th>
                     </tr>
                 </thead>
