--- a/AttenceProject/Views/SysWorkOffs/Approve.cshtml
+++ b/AttenceProject/Views/SysWorkOffs/Approve.cshtml
@@ -285,7 +285,7 @@
                         <th data-options="field:'WorkOffType',width:120">调休类型</th>
                         <th data-options="field:'VacationReason',width:120">调休原因</th>
                         <th data-options="field:'Emergency',width:120">紧急联系方式</th>
-                        <th data-options="field:'CopyFor',width:120">抄送人</th>
+                        @*<th data-options="field:'CopyFor',width:120">抄送人</th>*@
                         <th data-options="field:'ApplyStatus',width:60,align:'center'">申请状态</th>
                     </tr>
                 </thead>
@@ -368,7 +368,7 @@
                     <td align="right" width="70">审批结果:</td>
                     <td>
                         <input type="radio" name="ApplyStatus"  value="1"/>通过
-                        <input type="radio" name="ApplyStatus"  value="0"/>驳回
+                        <input type="radio" name="ApplyStatus"  value="-1"/>驳回
                     </td>
                 </tr>
             </table>
